--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,17 @@
             app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
             android:layout_height="0dp"/>
 
-    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+    <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigation_bar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:mbn_backgroundBottomColor="@color/colorPrimaryDark"
-            app:mbn_defaultIconColor="#868181"
-            app:mbn_selectedIconColor="@android:color/white"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            android:background="@color/colorPrimaryDark"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/bottom_menu"
+            />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
