--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
+            app:layout_constraintBottom_toTopOf="@+id/navigationBar"
             android:layout_height="0dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navigation_bar"
+            android:id="@+id/navigationBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
