--- a/app/src/main/res/layout/fragment_user_date.xml
+++ b/app/src/main/res/layout/fragment_user_date.xml
@@ -11,8 +11,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/step2"
-            android:layout_margin="10dp"
-            android:textColor="@android:color/white"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/colorAccent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/datePicker"
