--- a/app/src/main/res/layout/fragment_user_photo.xml
+++ b/app/src/main/res/layout/fragment_user_photo.xml
@@ -14,14 +14,17 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/userPhoto"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="10dp"
+            android:textColor="@color/colorAccent"
+            android:layout_marginBottom="20dp"
     />
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userPhoto"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/ic_add_soldier"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
