--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -14,16 +14,23 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/editTextName"
             app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/colorAccent"
+            android:layout_marginBottom="20dp"
     />
 
     <EditText
             android:id="@+id/editTextName"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:ems="10"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:inputType="text" tools:ignore="Autofill"/>
+            android:inputType="text" tools:ignore="Autofill"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
