--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,16 +5,20 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context="army.org.dmbtimer.fragments.CalendarFragment">
 
-    <DatePicker
+    <com.applandeo.materialcalendarview.CalendarView
             android:id="@+id/calendarView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="370dp"
+            android:layout_margin="10dp"
+            app:selectionColor="@color/colorPrimary"
+            app:type="one_day_picker"
+            app:eventsEnabled="true"
+            app:datePicker="true"
+            app:todayLabelColor="@color/colorPrimaryDark"
+            app:headerColor="@color/colorPrimaryDark"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
-            android:calendarViewShown="true"
-            android:spinnersShown="false"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
