--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -4,7 +4,7 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   tools:context=".fragments.add.UserNameFragment">
+                                                   tools:context=".fragments.add.soldier.UserNameFragment">
 
     <TextView
             android:id="@+id/textName"
@@ -22,13 +22,15 @@
             android:id="@+id/editTextName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:hint="@string/name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:inputType="text" tools:ignore="Autofill"
+            android:importantForAutofill="no"
+            android:inputType="text"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             />
